Add UI to Rock, Paper, Scissors
why? what?
Added buttons to take in user's choice of rock,
paper, scissors, making playing the game more
user-friendly rather than typing. Put a score
count and who wins the game every 5 rounds as well
so that the user can easily track game progress as
opposed to opening the terminal. Need to work on
play again button for resetting a game.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <script src="javascript.js"></script>
+        <script src="javascript.js" defer></script>
         <link href="style.css">
-        <title>Rock, Paper Scissors</title>
+        <title>Rock, Paper, Scissors</title>
     </head>
     <body>
-
+        <div id="plyrScore">Player: 0</div>
+        <div id="compScore">Computer: 0</div>
+        <div id="container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="results"></div>
+        <div id="winner"></div>
+        <div id="playAgain"></div>
     </body>
 </html>
