Implement Play Again Button
Added a play again button that pops up once a
winner is determined. Allows for easy of
replayability.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <title>Rock, Paper, Scissors</title>
     </head>
     <body>
-        <div id="plyrScore">Player: 0</div>
-        <div id="compScore">Computer: 0</div>
+        <div id="scores">
+            <div id="plyrScore">Player: 0</div>
+            <div id="compScore">Computer: 0</div>
+        </div>
         <div id="container">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
